--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
+    "react-native": "^0.47.1",
+    "react-native-material-design": "^0.3.7",
     "atob": "^2.0.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
